--- a/app/addons/mwl_xlsx/composer.json
+++ b/app/addons/mwl_xlsx/composer.json
@@ -7,5 +7,13 @@
         "psr-4": {
             "Tygh\\": "Tygh/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.5"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tygh\\Addons\\MwlXlsx\\Tests\\": "tests/"
+        }
     }
 }
