--- a/app/addons/mwl_xlsx/composer.json
+++ b/app/addons/mwl_xlsx/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "phpoffice/phpspreadsheet": "^1.29",
-        "google/apiclient": "^2.15"
+        "google/apiclient": "^2.15",
+        "stripe/stripe-php": "^13.0"
     },
     "autoload": {
         "psr-4": {
